--- a/tests/VHDPlus.Analyzer.Tests/VHDPlus.Analyzer.Tests.csproj
+++ b/tests/VHDPlus.Analyzer.Tests/VHDPlus.Analyzer.Tests.csproj
@@ -21,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\VHDPlus.Analyzer.csproj" />
+      <ProjectReference Include="..\..\src\VHDPlus.Analyzer\VHDPlus.Analyzer.csproj" />
     </ItemGroup>
 
     <ItemGroup>
